--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,7 +16,9 @@
     <dimen name="average_rating_tv_marginStart">36dp</dimen>
     <dimen name="average_rating_tv_marginTop">12dp</dimen>
     <dimen name="average_rating_tv_textSize">16sp</dimen>
-    <dimen name="synopsis_tv_marginStart">16dp</dimen>
+    <dimen name="movie_detail_default_margin">16dp</dimen>
+    <dimen name="movie_review_default_margin">16dp</dimen>
+    <dimen name="movie_review_default_margin_top">24dp</dimen>
     <dimen name="synopsis_tv_marginTop">24dp</dimen>
     <dimen name="synopsis_tv_paddingRight">24dp</dimen>
     <dimen name="synopsis_tv_paddingBottom">8dp</dimen>
@@ -26,4 +28,7 @@
     <dimen name="main_fragment_gv_verticalSpacing">0dp</dimen>
     <dimen name="movie_item_poster_image_iv_layout_width">200dp</dimen>
     <dimen name="movie_item_poster_image_iv_layout_height">300dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="movie_trailer_default_margin">16dp</dimen>
+    <dimen name="movie_trailer_default_margin_top">24dp</dimen>
 </resources>
