--- a/app/src/main/res/layout/movie_review_list_item.xml
+++ b/app/src/main/res/layout/movie_review_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,7 +12,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Written By:"/>
+        android:text="@string/reviewer_label"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/reviewer_tv"
@@ -19,15 +21,30 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/reviewer_label_tv"
-        tools:text="Jim Bob"/>
+        android:layout_marginLeft="@dimen/movie_review_default_margin"
+        tools:text="Jim Bob"
+        android:layout_marginStart="@dimen/movie_review_default_margin"
+        android:layout_marginBottom="@dimen/movie_review_default_margin"/>
+
 
     <TextView
         android:id="@+id/review_content_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/review_content_textview_marginbottom"
+        android:paddingRight="@dimen/review_content_default_padding"
         app:layout_constraintTop_toBottomOf="@+id/reviewer_label_tv"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:text="This is a review"/>
+        tools:text="This is a review"
+        android:paddingEnd="@dimen/review_content_default_padding" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintTop_toBottomOf="@+id/review_content_tv"
+        android:layout_marginTop="8dp"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
