Removed SharedPreferences and started wiring up menu.

--- a/app/src/main/res/menu/primary_menu.xml
+++ b/app/src/main/res/menu/primary_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/top_rated"
+        android:id="@+id/menu_top_rated"
         android:title="@string/primary_menu_top_rated"
         app:showAsAction="never"/>
     <item
