--- a/app/src/main/res/layout/favorite_movies_grid_view.xml
+++ b/app/src/main/res/layout/favorite_movies_grid_view.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:id="@+id/favorite_movies_linear_layout">
 
     <ImageView
         android:id="@+id/poster_list_view"
