--- a/app/src/main/res/layout/movie_review_list_item.xml
+++ b/app/src/main/res/layout/movie_review_list_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:paddingBottom="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/review_list_constraint_layout">
 
     <TextView
         android:id="@+id/reviewer_label_tv"
