--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -2,19 +2,19 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/detail_activity_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:id="@+id/detail_activity_scroll_view">
+    app:layout_constraintTop_toTopOf="parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/detail_activity_constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".MovieDetailActivity"
-        android:id="@+id/detail_activity_constraint_layout">
+        tools:context=".MovieDetailActivity">
 
         <LinearLayout
             android:id="@+id/title_ll"
@@ -124,13 +124,13 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/review_rv"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_height="@dimen/movie_detail_review_recyclerview_height"
+            android:layout_marginStart="@dimen/movie_detail_review_recyclerview_marginstart"
+            android:layout_marginLeft="@dimen/movie_detail_review_recyclerview_marginleft"
             android:layout_marginTop="@dimen/review_recyclerview_default_margin"
             android:layout_marginBottom="@dimen/review_recyclerview_default_margin"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
+            android:paddingLeft="@dimen/movie_detail_review_recyclerview_paddingleft"
+            android:paddingRight="@dimen/movie_detail_review_recyclerview_paddingright"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/review_content_section_title_tv" />
 
@@ -152,7 +152,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/video_section_default_margin"
             android:layout_marginLeft="@dimen/video_section_default_margin"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/movie_detail_review_video_section_title_tv_layout_margintop"
             android:layout_marginBottom="@dimen/video_section_default_margin"
             android:text="@string/video_section_title"
             android:textAllCaps="true"
